--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     android:id="@+id/tv_text"
     android:layout_width="wrap_content"
     android:layout_gravity="center"
-    android:layout_height="wrap_content"
-    android:text="Hello World!" />
+    android:layout_height="wrap_content" />
 
 </FrameLayout>
